# hive

./: .env.example  .gitignore  PROGRESS.md  README.md  cli.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_test.py
agents/: __init__.py  architect.py  backend_dev.py  base_agent.py  frontend_dev.py  observer.py  product_owner.py  scrum_master.py
backlog/: index.yaml
config/: agents.yaml  mcp_servers.yaml  rag.yaml
core/: __init__.py  activity_logger.py  backlog.py  context.py  genetics.py  global_config.py  hatchery.py  link.py  logging.py  message_bus.py  models.py  orchestrator.py  overmind.py  overseer.py
core/mcp/: __init__.py  client.py  config.py  manager.py  protocol.py  transport.py
docs/: GPT5_PROMPT_ANALYSIS.md  PROJECT_ANALYSIS.md  PROMPT_ANALYSIS.md
docs/adr/: TEMPLATE.md
scripts/: setup.sh  test.sh  test_context7.py
tests/: __init__.py  conftest.py  test_activity_logger.py  test_adr_consensus.py  test_adr_workflow.py  test_agents.py  test_backlog.py  test_cli.py  test_context.py  test_dynamic_context.py  test_error_reporting.py  test_file_ops.py  test_genetics.py  test_git_ops.py  test_global_config.py  test_guardrails.py  test_hatchery.py  test_loop_prevention.py  test_mcp.py  test_observer_monitor.py  test_overseer.py  test_rag.py  test_shell_ops.py  test_shell_stability.py  test_tools_registry.py
tools/: __init__.py  base.py  context_ops.py  file_ops.py  git_ops.py  guardrails.py  mcp_ops.py  shell_ops.py
tools/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  rag_tool.py  vectordb.py
